# Flood-Fill

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  meson.build
data/: floodit.desktop
res/: floodfill.desktop  meson.build
src/: game.c  game.h  main.c  meson.build  window.h
